fix: 🐛 width of scrollbar

--- a/resources/skins.citizen.styles/common/scrollbar.less
+++ b/resources/skins.citizen.styles/common/scrollbar.less
@@ -7,7 +7,7 @@
 	}
 
 	::-webkit-scrollbar {
-		width: 14px;
+		width: 10px;
 	}
 
 	::-webkit-scrollbar-track {
@@ -20,7 +20,7 @@
 	}
 
 	::-webkit-scrollbar-thumb {
-		border: 5px solid transparent;
+		border: 2px solid transparent;
 		border-radius: var( --border-radius--large );
 		background-clip: content-box;
 		box-shadow: inset 0 0 0 10px var( --background-color-icon );
